@@ -40,5 +40,5 @@ $(ASSEMBLY) $(ASSEMBLY).mdb: $(build_sources) $(build_resources) $(build_datafil
 	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$@ -target:$(COMPILE_TARGET) $(build_sources) $(build_resources_embed) $(build_references_ref)
 
 if ENABLE_GUI
-include $(top_srcdir)/Makefile.include
+include $(top_srcdir)/makefile-sample.include
 endif
