@@ -5,6 +5,7 @@ COMPILE_TARGET = library
 PROJECT_REFERENCES =  \
 	../../bin/Mono.Addins.dll
 BUILD_DIR = ./bin/Debug
+NOINSTALL=yes
 
 if ENABLE_TESTS
 all: $(ASSEMBLY)
@@ -46,5 +47,5 @@ $(ASSEMBLY) $(ASSEMBLY).mdb: $(build_sources) $(build_resources) $(build_datafil
 	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$@ -target:$(COMPILE_TARGET) $(build_sources) $(build_resources_embed) $(build_references_ref)
 
 if ENABLE_TESTS
-include $(top_srcdir)/Makefile.include
+include $(top_srcdir)/makefile-sample.include
 endif
