@@ -1,5 +1,9 @@
 2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 
 
+	Avoid installing assemblies generated by samples and tests.
+
+2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 
+
 	Added missing makefiles.
 
 2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 
